fixed overflow issue

--- a/src/components/orderDetails/orderDetails.scss
+++ b/src/components/orderDetails/orderDetails.scss
@@ -130,7 +130,6 @@
     position: absolute;
     top: 68px;
     max-height: 500px;
-    overflow-y: auto;
 
     .purchase-data {
       position: relative;
